# StatForge

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/statforge/api/: main.py
src/statforge/config/: settings.py
src/statforge/db/: session.py
src/statforge/etl/extract/: boc.py  cmhc.py  statcan.py
src/statforge/panel/: app.py  raw_explorer.py
src/statforge/utils/: http.py
